About Navbar Responsive

--- a/src/output.css
+++ b/src/output.css
@@ -1266,6 +1266,11 @@ video {
     padding-right: 10rem;
   }
 
+  .sm\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .sm\:pb-16 {
     padding-bottom: 4rem;
   }
